# solvent

./: pyproject.toml
solvent/: graph.py  modeling.py
solvent/mapping/: interpreter.py  mapping.tx
solvent/variamos/: model.py
tests/: test_graph.py  test_mapping.py  test_model.py
tests/assets/: feature_model.json
