[tool.poetry]
name = "solvent"
version = "0.1.0"
description = ""
authors = ["Francisco J. Piedrahíta-Vélez <francisco.piedrahita@rappi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pyhumps = "^3.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
